tests/baselines/reference/functionCall12.errors.txt
==== tests/cases/compiler/functionCall12.ts (6 errors) ====
    function foo(a:string, b?:number, c?:string){}
    foo('foo', 1); 
    foo('foo'); 
    foo();
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo(1, 'bar');
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo('foo', 1, 'bar');
    foo('foo', 1, 3);
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 3 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    